force-app/main/default/objects/Equipment__c/Equipment__c.object-meta.xml
<CustomObject>
    <description>Equipment defines a piece of equipment that could either be an asset or tool. Equipment is related to Project Service Equipment and Retailer Service Equipment.</description>
    <label>Equipment</label>
    <nameField>
        <label>Equipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>