force-app/main/default/objects/Equipment__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>An entry field that describes the Equipment.</description>
    <inlineHelpText>Enter a description of the equipment.</inlineHelpText>
    <label>Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>