force-app/main/default/objects/Equipment__c/fields/EquipmentType__c.field-meta.xml
<CustomField>
    <fullName>EquipmentType__c</fullName>
    <description>A picklist that indicates the type of Equipment.</description>
    <inlineHelpText>Choose the type of equipment.</inlineHelpText>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Tool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>