force-app/main/default/objects/Equipment__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox that indicates if this Equipment is active</description>
    <inlineHelpText>Select this box if this equipment is active.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>