force-app/main/default/objects/Equipment__c/fields/ToolIconClass__c.field-meta.xml
<CustomField>
    <fullName>ToolIconClass__c</fullName>
    <label>Tool Icon Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>