force-app/main/default/objects/Equipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EquipmentType__c</columns>
    <columns>IsActive__c</columns>
    <columns>ToolIconClass__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>